--- a/probability_distributions.ipynb
+++ b/probability_distributions.ipynb
@@ -2,60 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "9575a8d9",
+   "execution_count": 159,
+   "id": "803f4051",
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from scipy import stats"
+    "from scipy import stats\n",
+    "from scipy.stats import norm"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6626807",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1469e256",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c6b8ad5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1ed3b46",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "803b9cf7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "2efac09d",
+   "id": "eaf222cc",
    "metadata": {},
    "source": [
     "For the following problems, use python to simulate the problem and calculate an experimental probability, then compare that to the theoretical probability.\n",
@@ -64,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cea0e0ed",
+   "id": "1257b74f",
    "metadata": {},
    "source": [
     "A bank found that the average number of cars waiting during the noon hour at a drive-up window follows a Poisson distribution with a mean of 2 cars. \n",
@@ -81,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7dbcf7ff",
+   "id": "8a9ef77a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8d42a29f",
+   "id": "683f79dd",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2b9ba56b",
+   "id": "5ce0e971",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e23b8712",
+   "id": "fa08d85f",
    "metadata": {},
    "source": [
     "What is the probability that no cars drive up in the noon hour?"
@@ -150,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e1d5aad5",
+   "id": "41e53288",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4507ccf",
+   "id": "709bcd47",
    "metadata": {},
    "source": [
     "What is the probability that 3 or more cars come through the drive through?"
@@ -179,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2c65fc65",
+   "id": "89b8ecde",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7cfecd8",
+   "id": "2d95ca25",
    "metadata": {},
    "source": [
     "How likely is it that the drive through gets at least 1 car?"
@@ -208,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "87ee7a4c",
+   "id": "73b28f2b",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9088efa3",
+   "id": "b300a1ce",
    "metadata": {},
    "source": [
     "Grades of State University graduates are normally distributed with a mean of 3.0 and a standard deviation of .3. Calculate the following:"
@@ -237,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "7601b6b1",
+   "id": "639408ee",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "92f46784",
+   "id": "ca23a55a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75eb3c32",
+   "id": "3db8c9b2",
    "metadata": {},
    "source": [
     "What grade point average is required to be in the top 5% of the graduating class?"
@@ -282,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1497968d",
+   "id": "52316de0",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f24b4482",
+   "id": "6bb1c6f0",
    "metadata": {},
    "source": [
     "What GPA constitutes the bottom 15% of the class?"
@@ -312,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "1fffca74",
+   "id": "35cf5d00",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96187a34",
+   "id": "31d97db4",
    "metadata": {},
    "source": [
     "An eccentric alumnus left scholarship money for students in the third decile from the bottom of their class. Determine the range of the third decile. "
@@ -342,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5d2cff02",
+   "id": "e916e943",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c52753ee",
+   "id": "bcdd856c",
    "metadata": {},
    "source": [
     "Would a student with a 2.8 grade point average qualify for this scholarship?"
@@ -371,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "5a409141",
+   "id": "4d31628a",
    "metadata": {
     "scrolled": true
    },
@@ -396,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a71069b",
+   "id": "aafbf844",
    "metadata": {},
    "source": [
     "If I have a GPA of 3.5, what percentile am I in?"
@@ -405,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "41ca9299",
+   "id": "d1bf07d5",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bde2125",
+   "id": "68862a2a",
    "metadata": {},
    "source": [
     "A marketing website has an average click-through rate of 2%. \n",
@@ -440,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ea31882c",
+   "id": "690ea479",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea4ba59b",
+   "id": "60937cfa",
    "metadata": {},
    "source": [
     "You are working on some statistics homework consisting of 100 questions where all of the answers are a probability rounded to the hundreths place. \n",
@@ -477,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c96ac1b",
+   "id": "ce2c84d3",
    "metadata": {},
    "source": [
     "Theoretical"
@@ -486,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "72eced7f",
+   "id": "1caa5604",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "929d3303",
+   "id": "8adde755",
    "metadata": {},
    "source": [
     "Simulation"
@@ -522,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "c971a519",
+   "id": "48daa1b4",
    "metadata": {},
    "outputs": [
     {
@@ -542,76 +503,519 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6531438",
+   "cell_type": "markdown",
+   "id": "d7e2c8a3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The codeup staff tends to get upset when the student break area is not cleaned up. \n",
+    "\n",
+    "Suppose that there's a 3% chance that any one student cleans the break area when they visit it, and, on any given day, about 90% of the 3 active cohorts of 22 students visit the break area. \n",
+    "\n",
+    "How likely is it that the break area gets cleaned up each day? \n",
+    "\n",
+    "How likely is it that it goes two days without getting cleaned up? All week?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc156dce",
+   "metadata": {},
+   "source": [
+    "Theoretical"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "863abbcd",
+   "execution_count": 121,
+   "id": "305f860e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.834"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "percent = 0.03\n",
+    "c = 3\n",
+    "s = 22\n",
+    "n = round(.9*c*s)\n",
+    "# 1 / 90% of 66\n",
+    "cleaned = stats.binom(n, percent).sf(0) # probability each day\n",
+    "cleaned.round(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a93cb9d",
+   "metadata": {},
+   "source": [
+    "Simulation"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5aa84778",
+   "execution_count": 113,
+   "id": "61c5bd5d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8322"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(np.random.choice([1,0], size=(10_000, n), p=[0.03, 0.97]).sum(axis = 1) > 0).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38d4b204",
+   "metadata": {},
+   "source": [
+    "Theoretical"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "01777577",
+   "execution_count": 122,
+   "id": "e6aa32bf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.027"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaned_two = stats.binom(n*2, percent).sf(0) # probability x2 days\n",
+    "(1 - cleaned_two).round(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5284ef8",
+   "metadata": {},
+   "source": [
+    "Simulation"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "66e81e89",
+   "execution_count": 115,
+   "id": "2018b995",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.027"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(np.random.choice([1,0], size=(10_000, n*2), p=[0.03, 0.97]).sum(axis = 1) == 0)\\\n",
+    ".mean().round(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5ddb7c0",
+   "metadata": {},
+   "source": [
+    "Theoretical"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "eef426bb",
+   "execution_count": 127,
+   "id": "3f46ee4f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0001"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaned_week = stats.binom(n*5, percent).sf(0)\n",
+    "(1 - cleaned_week).round(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57cb5eb8",
+   "metadata": {},
+   "source": [
+    "Simulation"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2423271c",
+   "execution_count": 126,
+   "id": "5915ad84",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0001"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(np.random.choice([1,0], size=(10_000, n*5), p=[0.03, 0.97]).sum(axis = 1) == 0).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64f909fe",
+   "metadata": {},
+   "source": [
+    "You want to get lunch at La Panaderia, but notice that the line is usually very long at lunchtime. \n",
+    "\n",
+    "After several weeks of careful observation, you notice that the average number of people in line when your lunch break starts is normally distributed with a mean of 15 and standard deviation of 3. \n",
+    "\n",
+    "If it takes 2 minutes for each person to order, and 10 minutes from ordering to getting your food, what is the likelihood that you have at least 15 minutes left to eat your food before you have to go back to class? \n",
+    "\n",
+    "Assume you have one hour for lunch, and ignore travel time to and from La Panaderia."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4936d023",
+   "execution_count": 129,
+   "id": "ce36467b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ave = 15 # people\n",
+    "dev = 3 # people\n",
+    "person_order = 2 # minutes\n",
+    "food_wait = 10 # minutes\n",
+    "\n",
+    "# 1 hour per lunch\n",
+    "# probability of 15 minutes left to eat food"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3461ef8",
+   "metadata": {},
+   "source": [
+    "Theoretical"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "382c3add",
+   "execution_count": 139,
+   "id": "a87252e3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.798"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean = ave * person_order # 30 minutes\n",
+    "std_dev = dev * person_order # 6 minutes\n",
+    "lunch = 60\n",
+    "eat = 15\n",
+    "\n",
+    "wait_time = lunch - (food_wait + eat)\n",
+    "wait_time\n",
+    "\n",
+    "stats.norm(mean, std_dev).cdf(wait_time).round(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80717ee6",
+   "metadata": {},
+   "source": [
+    "Simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "9f140944",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.798"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.normal(mean, std_dev, 10_000).mean()\n",
+    "cdf = norm(mean, std_dev).cdf(wait_time)\n",
+    "cdf.round(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ef7c8ef",
+   "metadata": {},
+   "source": [
+    "Connect to the employees database and find the average salary of current employees, along with the standard deviation. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "171dc41e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>avg_s</th>\n",
+       "      <th>sd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>72012.2359</td>\n",
+       "      <td>17309.959336</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        avg_s            sd\n",
+       "0  72012.2359  17309.959336"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from env import host, user, password\n",
+    "\n",
+    "def get_connection(db, user=user, host=host, password=password):\n",
+    "    return f'mysql+pymysql://{user}:{password}@{host}/{db}'\n",
+    "    \n",
+    "sql_query = '''SELECT AVG(salary) as avg_s, STDDEV(salary) as sd\n",
+    "FROM employees\n",
+    "JOIN salaries as s\n",
+    "\tUSING(emp_no)\n",
+    "WHERE s.to_date > NOW();'''\n",
+    "\n",
+    "def get_employees_data():\n",
+    "    return pd.read_sql(sql_query, get_connection('employees'))\n",
+    "\n",
+    "emp_sal = get_employees_data()\n",
+    "emp_sal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9427ded7",
+   "metadata": {},
+   "source": [
+    "For the following questions, calculate the answer based on modeling the employees salaries with a normal distribution defined by the calculated mean and standard deviation then compare this answer to the actual values present in the salaries dataset.\n",
+    "\n",
+    "\n",
+    "What percent of employees earn less than 60,000?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "id": "1c17c44e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24.39"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# normal distribution = mean, std_dev, < 60,000\n",
+    "\n",
+    "round(float(stats.norm(emp_sal.avg_s, emp_sal.sd).cdf(60_000) * 100), 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54a13df5",
+   "metadata": {},
+   "source": [
+    "What percent of employees earn more than 95,000?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "id": "28c10517",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.21"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(float(stats.norm(emp_sal.avg_s, emp_sal.sd).sf(95_000) * 100), 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14c74fb3",
+   "metadata": {},
+   "source": [
+    "What percent of employees earn between 65,000 and 80,000?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "id": "07fc2640",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.335"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(float(np.diff(stats.norm(emp_sal.avg_s, emp_sal.sd).cdf([65_000, 80_000]))), 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "id": "d369d767",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.335"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round((0.67776383 - 0.34270261),3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84710ccc",
+   "metadata": {},
+   "source": [
+    "What do the top 5% of employees make?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "id": "600a212b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100484.59"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(float(stats.norm(emp_sal.avg_s, emp_sal.sd).isf(0.05)), 2)"
+   ]
   }
  ],
  "metadata": {
